build/log/idf_py_stderr_output_25879
In file included from /home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:15,
                 from /workspace/main/shexiang-ov2640.c:9:
/workspace/main/shexiang-ov2640.c: In function 'capture_handler':
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log_color.h:98:31: error: format '%u' expects argument of type 'unsigned int', but argument 6 has type 'long unsigned int' [-Werror=format=]
   98 | #define LOG_COLOR_E           ""
      |                               ^~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:62:37: note: in expansion of macro 'LOG_COLOR_E'
   62 | #define LOG_FORMAT(letter, format)  LOG_COLOR_ ## letter #letter " (%" PRIu32 ") %s: " format LOG_RESET_COLOR "\n"
      |                                     ^~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:182:86: note: in expansion of macro 'LOG_FORMAT'
  182 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                      ^~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:205:38: note: in expansion of macro 'ESP_LOG_LEVEL'
  205 |         if (_ESP_LOG_ENABLED(level)) ESP_LOG_LEVEL(level, tag, format, ##__VA_ARGS__); \
      |                                      ^~~~~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:114:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  114 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/workspace/main/shexiang-ov2640.c:175:5: note: in expansion of macro 'ESP_LOGI'
  175 |     ESP_LOGI(TAG, "JPG: %uB", (uint32_t)(pic->len));
      |     ^~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log_color.h:99:31: error: format '%u' expects argument of type 'unsigned int', but argument 6 has type 'long unsigned int' [-Werror=format=]
   99 | #define LOG_COLOR_W           ""
      |                               ^~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:62:37: note: in expansion of macro 'LOG_COLOR_W'
   62 | #define LOG_FORMAT(letter, format)  LOG_COLOR_ ## letter #letter " (%" PRIu32 ") %s: " format LOG_RESET_COLOR "\n"
      |                                     ^~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:183:86: note: in expansion of macro 'LOG_FORMAT'
  183 |         else if (level==ESP_LOG_WARN )      { esp_log_write(ESP_LOG_WARN,       tag, LOG_FORMAT(W, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                      ^~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:205:38: note: in expansion of macro 'ESP_LOG_LEVEL'
  205 |         if (_ESP_LOG_ENABLED(level)) ESP_LOG_LEVEL(level, tag, format, ##__VA_ARGS__); \
      |                                      ^~~~~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:114:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  114 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/workspace/main/shexiang-ov2640.c:175:5: note: in expansion of macro 'ESP_LOGI'
  175 |     ESP_LOGI(TAG, "JPG: %uB", (uint32_t)(pic->len));
      |     ^~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log_color.h:101:31: error: format '%u' expects argument of type 'unsigned int', but argument 6 has type 'long unsigned int' [-Werror=format=]
  101 | #define LOG_COLOR_D           ""
      |                               ^~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:62:37: note: in expansion of macro 'LOG_COLOR_D'
   62 | #define LOG_FORMAT(letter, format)  LOG_COLOR_ ## letter #letter " (%" PRIu32 ") %s: " format LOG_RESET_COLOR "\n"
      |                                     ^~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:184:86: note: in expansion of macro 'LOG_FORMAT'
  184 |         else if (level==ESP_LOG_DEBUG )     { esp_log_write(ESP_LOG_DEBUG,      tag, LOG_FORMAT(D, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                      ^~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:205:38: note: in expansion of macro 'ESP_LOG_LEVEL'
  205 |         if (_ESP_LOG_ENABLED(level)) ESP_LOG_LEVEL(level, tag, format, ##__VA_ARGS__); \
      |                                      ^~~~~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:114:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  114 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/workspace/main/shexiang-ov2640.c:175:5: note: in expansion of macro 'ESP_LOGI'
  175 |     ESP_LOGI(TAG, "JPG: %uB", (uint32_t)(pic->len));
      |     ^~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log_color.h:102:31: error: format '%u' expects argument of type 'unsigned int', but argument 6 has type 'long unsigned int' [-Werror=format=]
  102 | #define LOG_COLOR_V           ""
      |                               ^~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:62:37: note: in expansion of macro 'LOG_COLOR_V'
   62 | #define LOG_FORMAT(letter, format)  LOG_COLOR_ ## letter #letter " (%" PRIu32 ") %s: " format LOG_RESET_COLOR "\n"
      |                                     ^~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:185:86: note: in expansion of macro 'LOG_FORMAT'
  185 |         else if (level==ESP_LOG_VERBOSE )   { esp_log_write(ESP_LOG_VERBOSE,    tag, LOG_FORMAT(V, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                      ^~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:205:38: note: in expansion of macro 'ESP_LOG_LEVEL'
  205 |         if (_ESP_LOG_ENABLED(level)) ESP_LOG_LEVEL(level, tag, format, ##__VA_ARGS__); \
      |                                      ^~~~~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:114:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  114 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/workspace/main/shexiang-ov2640.c:175:5: note: in expansion of macro 'ESP_LOGI'
  175 |     ESP_LOGI(TAG, "JPG: %uB", (uint32_t)(pic->len));
      |     ^~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log_color.h:100:31: error: format '%u' expects argument of type 'unsigned int', but argument 6 has type 'long unsigned int' [-Werror=format=]
  100 | #define LOG_COLOR_I           ""
      |                               ^~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:62:37: note: in expansion of macro 'LOG_COLOR_I'
   62 | #define LOG_FORMAT(letter, format)  LOG_COLOR_ ## letter #letter " (%" PRIu32 ") %s: " format LOG_RESET_COLOR "\n"
      |                                     ^~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:186:86: note: in expansion of macro 'LOG_FORMAT'
  186 |         else                                { esp_log_write(ESP_LOG_INFO,       tag, LOG_FORMAT(I, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                      ^~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:205:38: note: in expansion of macro 'ESP_LOG_LEVEL'
  205 |         if (_ESP_LOG_ENABLED(level)) ESP_LOG_LEVEL(level, tag, format, ##__VA_ARGS__); \
      |                                      ^~~~~~~~~~~~~
/home/ubuntu/esp-idf-v5.4/components/log/include/esp_log.h:114:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  114 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/workspace/main/shexiang-ov2640.c:175:5: note: in expansion of macro 'ESP_LOGI'
  175 |     ESP_LOGI(TAG, "JPG: %uB", (uint32_t)(pic->len));
      |     ^~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/shexiang-ov2640.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7355: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
